@startuml

title __GEOTEXTUALCONSTRAINTOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geoTextualOperators {
      namespace geoTextualConstraintOperators {
        abstract class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.GeoTextualConstraintOperator {
            # GeoTextualConstraintOperator()
            {static} ~ formGeometryAndTextualExpression()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geoTextualOperators {
      namespace geoTextualConstraintOperators {
        class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.OperatorInGeoTextualCircle {
            + getOperatorExpression()
            {static} + newOperatorInGeoTextualCircle()
            # OperatorInGeoTextualCircle()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geoTextualOperators {
      namespace geoTextualConstraintOperators {
        class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.OperatorInGeoTextualPolygon {
            + getOperatorExpression()
            {static} + newOperatorInGeoTextualPolygon()
            # OperatorInGeoTextualPolygon()
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.geoperators.geoTextualOperators {
      namespace geoTextualConstraintOperators {
        class gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.OperatorInGeoTextualRectangle {
            + getOperatorExpression()
            {static} + newOperatorInGeoTextualRectangle()
            # OperatorInGeoTextualRectangle()
        }
      }
    }
  }
  

  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.GeoTextualConstraintOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.GeoTextualConstraintOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.OperatorInGeoTextualCircle -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.GeoTextualConstraintOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.OperatorInGeoTextualPolygon -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.GeoTextualConstraintOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.OperatorInGeoTextualRectangle -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.geoperators.geoTextualOperators.geoTextualConstraintOperators.GeoTextualConstraintOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
